Preventing long words overflow

--- a/feature-libs/customer-ticketing/styles/components/_customer-ticketing-list.scss
+++ b/feature-libs/customer-ticketing/styles/components/_customer-ticketing-list.scss
@@ -95,6 +95,8 @@
     color: var(--cx-color-text);
     overflow: hidden;
     text-overflow: ellipsis;
+    word-wrap: break-word;
+    hyphens: auto;
 
     @include media-breakpoint-up(sm) {
       display: -webkit-box;
